--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@monaco-editor/react": "4.4.5",
+    "copy-to-clipboard": "3.3.1",
+    "monaco-themes": "0.4.2",
+    "motoko": "0.1.1",
+    "react-icons": "4.4.0",
+    "react-tooltip": "4.2.21",
+    "sass": "1.54.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
