--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "@monaco-editor/react": "4.4.5",
     "copy-to-clipboard": "3.3.1",
     "monaco-themes": "0.4.2",
-    "motoko": "0.1.1",
+    "motoko": "0.1.2",
+    "pako": "^2.0.4",
     "react-icons": "4.4.0",
     "react-tooltip": "4.2.21",
     "sass": "1.54.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.3.0",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "13.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "netlify": "12.0.0",
+    "react": "17",
+    "react-dom": "17",
     "react-scripts": "4.0.3",
     "web-vitals": "2.1.4"
   },
@@ -24,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && netlify deploy --dir=build",
+    "deploy:prod": "npm run build && netlify deploy --dir=build --prod"
   },
   "eslintConfig": {
     "extends": [
