--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "embed-motoko",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "vite --port 3000",
+    "build": "vite build",
+    "test": "jest",
+    "deploy": "npm run build && netlify deploy --dir=build",
+    "deploy:prod": "npm run build && netlify deploy --dir=build --prod"
+  },
   "dependencies": {
     "@monaco-editor/react": "4.4.5",
     "copy-to-clipboard": "3.3.1",
@@ -9,45 +16,21 @@
     "motoko": "0.1.2",
     "pako": "2.0.4",
     "react-icons": "4.4.0",
-    "react-tooltip": "4.2.21",
-    "sass": "^1.54.0"
+    "react-tooltip": "4.2.21"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "13.5.0",
+    "@vitejs/plugin-react": "2.0.0",
     "autoprefixer": "10.4.8",
+    "jest": "^28.1.3",
     "netlify": "12.0.0",
-    "postcss": "8.4.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
+    "sass": "1.54.0",
     "tailwindcss": "3.1.6",
+    "vite": "3.0.4",
     "web-vitals": "2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "deploy": "npm run build && netlify deploy --dir=build",
-    "deploy:prod": "npm run build && netlify deploy --dir=build --prod"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
