--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "1.54.0",
     "tailwindcss": "3.1.6",
     "vite": "3.0.4",
+    "vite-imagetools": "4.0.4",
     "web-vitals": "2.1.4"
   }
 }
