--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "4.4.5",
+    "classnames": "2.3.1",
     "copy-to-clipboard": "3.3.1",
     "monaco-themes": "0.4.2",
     "motoko": "0.1.3",
