--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vite build",
     "test": "jest",
     "deploy": "npm run build && netlify deploy --dir=build",
-    "deploy:prod": "npm run build && netlify deploy --dir=build --prod"
+    "deploy:prod": "npm run build && netlify deploy --dir=build --prod",
+    "prepare": "husky install",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@monaco-editor/react": "4.4.5",
@@ -25,7 +27,9 @@
     "@testing-library/user-event": "13.5.0",
     "@vitejs/plugin-react": "2.0.0",
     "autoprefixer": "10.4.8",
-    "jest": "^28.1.3",
+    "husky": "8.0.1",
+    "jest": "28.1.3",
+    "lint-staged": "13.0.3",
     "netlify": "12.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
