--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "vite --port 3000",
     "build": "vite build",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "deploy": "npm run build && netlify deploy --dir=build",
     "deploy:prod": "npm run build && netlify deploy --dir=build --prod",
     "prepare": "husky install",
@@ -13,34 +14,40 @@
   },
   "dependencies": {
     "@monaco-editor/react": "4.4.5",
+    "@testing-library/jest-dom": "5.15.0",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "classnames": "2.3.1",
     "copy-to-clipboard": "3.3.1",
     "monaco-themes": "0.4.2",
     "motoko": "0.1.3",
     "pako": "2.0.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-icons": "4.4.0",
     "react-tooltip": "4.2.21"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "12.1.5",
-    "@testing-library/user-event": "13.5.0",
     "@vitejs/plugin-react": "2.0.0",
     "autoprefixer": "10.4.8",
+    "cross-env": "7.0.3",
     "husky": "8.0.1",
-    "jest": "28.1.3",
+    "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
     "netlify": "12.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "prettier": "2.7.1",
     "sass": "1.54.0",
     "tailwindcss": "3.1.6",
     "vite": "3.0.4",
     "vite-imagetools": "4.0.4",
+    "vitest": "0.20.2",
     "web-vitals": "2.1.4"
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": [
+      "prettier --write",
       "eslint --max-warnings=0 --fix"
     ]
   }
