--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react": "2.0.0",
     "autoprefixer": "10.4.8",
     "cross-env": "7.0.3",
+    "eslint": "8.20.0",
     "husky": "8.0.1",
     "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
