--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "10.4.8",
     "cross-env": "7.0.3",
     "eslint": "8.20.0",
+    "eslint-config-react-app": "7.0.1",
     "husky": "8.0.1",
     "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
