Run eslint before prettier in pre-commit hook

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": [
-      "prettier --write",
-      "eslint --max-warnings=0 --fix"
+      "eslint --max-warnings=0 --fix",
+      "prettier --write"
     ]
   }
 }
