--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "vite build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "deploy": "npm run build && netlify deploy --dir=build",
-    "deploy:prod": "npm run build && netlify deploy --dir=build --prod",
+    "deploy": "npm run build && netlify deploy --dir=dist",
+    "deploy:prod": "npm run build && netlify deploy --dir=dist --prod",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
