--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "motoko": "0.1.3",
     "pako": "2.0.4",
     "react": "17.0.2",
+    "react-device-detect": "2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "4.4.0",
     "react-tooltip": "4.2.21"
