--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-device-detect": "2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "4.4.0",
+    "react-syntax-highlighter": "15.5.0",
     "react-tooltip": "4.2.21"
   },
   "devDependencies": {
