--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "@monaco-editor/react": "4.4.5",
     "@testing-library/jest-dom": "5.15.0",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
@@ -23,6 +22,7 @@
     "bs58": "5.0.0",
     "classnames": "2.3.1",
     "copy-to-clipboard": "3.3.1",
+    "highlight.js": "11.6.0",
     "monaco-themes": "0.4.2",
     "motoko": "0.1.4",
     "pako": "2.0.4",
@@ -30,6 +30,7 @@
     "react-device-detect": "2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "4.4.0",
+    "react-simple-code-editor": "0.11.2",
     "react-syntax-highlighter": "15.5.0",
     "react-tooltip": "4.2.21"
   },
