--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "embed-motoko",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "private": true,
   "scripts": {
     "start": "vite --port 3000",
