--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@vitejs/plugin-react": "2.0.1",
     "autoprefixer": "10.4.8",
     "cross-env": "7.0.3",
-    "esbuild": "^0.15.13",
+    "esbuild": "0.15.16",
     "eslint": "8.22.0",
     "eslint-config-react-app": "7.0.1",
     "husky": "8.0.1",
