--- a/package.json
+++ b/package.json
@@ -48,10 +48,11 @@
     "prettier": "2.7.1",
     "sass": "1.54.4",
     "tailwindcss": "3.1.8",
-    "vite": "3.0.8",
-    "vite-imagetools": "4.0.4",
-    "vitest": "0.22.0",
-    "web-vitals": "2.1.4"
+    "vite": "3.2.5",
+    "vite-imagetools": "4.0.11",
+    "vite-plugin-pwa": "^0.13.3",
+    "vitest": "0.25.5",
+    "web-vitals": "3.1.0"
   },
   "lint-staged": {
     "src/**/*.{js,ts,jsx,tsx}": [
