Add placeholder Motoko backend

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
-    "start": "vite --port 3000",
-    "build:frontend": "vite build",
-    "build": "npm run build:frontend",
-    "test": "vitest run",
+    "setup": "npm ci && dfx canister create backend && dfx generate backend && dfx deploy",
+    "start": "run-p frontend backend",
+    "frontend": "vite --port 3000",
+    "backend": "mo-dev --generate --deploy -y",
+    "test": "vitest run && mo-test",
     "test:watch": "vitest",
-    "deploy": "npm run test && npm run build && netlify deploy --dir=dist",
-    "deploy:prod": "npm run test && npm run build && netlify deploy --dir=dist --prod",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
@@ -43,8 +42,10 @@
     "eslint": "8.22.0",
     "eslint-config-react-app": "7.0.1",
     "husky": "8.0.1",
+    "ic-mops": "^0.14.0",
     "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
+    "mo-dev": "^0.10.1",
     "netlify": "13.1.0",
     "prettier": "2.8.2",
     "sass": "1.54.4",
