--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "lint-staged": "13.0.3",
     "mo-dev": "^0.10.1",
     "netlify": "13.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.8.2",
     "sass": "1.54.4",
     "tailwindcss": "3.1.8",
-    "vite": "4.0.4",
+    "vite": "4.3.9",
     "vite-imagetools": "4.0.13",
     "vitest": "0.26.3",
     "web-vitals": "3.1.0"
