--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "backend": "mo-dev --generate --deploy -y",
     "test": "vitest run && mo-test",
     "test:watch": "vitest",
+    "sources": "mops sources",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
@@ -42,12 +43,12 @@
     "eslint": "8.22.0",
     "eslint-config-react-app": "7.0.1",
     "husky": "8.0.1",
-    "ic-mops": "^0.14.0",
+    "ic-mops": "0.14.0",
     "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
     "mo-dev": "^0.10.1",
     "netlify": "13.1.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "prettier": "2.8.2",
     "sass": "1.54.4",
     "tailwindcss": "3.1.8",
