Refactor for hosting on the Internet Computer (#96)
* Update gitignore

* Add dfx.json

* Add placeholder Motoko backend

* Move CODEOWNERS to .github

* Set up Mops

* Add 'sources' npm script

* Reintroduce 'build' script

* Set up custom 'embed.motoko.org' domain

* Redirect to custom domain

* Generate canister_ids.json

* Bump Mops

* Update unit test CI workflow

* Redirect 'embed.smartcontracts.org' to 'embed.motoko.org'

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
-    "start": "vite --port 3000",
-    "build:frontend": "vite build",
-    "build": "npm run build:frontend",
+    "setup": "npm ci && dfx canister create backend && dfx generate backend && dfx deploy",
+    "start": "run-p frontend backend",
+    "frontend": "vite --port 3000",
+    "backend": "mo-dev --generate --deploy -y",
+    "build": "vite build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "deploy": "npm run test && npm run build && netlify deploy --dir=dist",
-    "deploy:prod": "npm run test && npm run build && netlify deploy --dir=dist --prod",
+    "sources": "mops sources",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
@@ -43,13 +44,16 @@
     "eslint": "8.22.0",
     "eslint-config-react-app": "7.0.1",
     "husky": "8.0.1",
+    "ic-mops": "0.14.1",
     "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
+    "mo-dev": "^0.10.1",
     "netlify": "13.1.0",
+    "npm-run-all": "4.1.5",
     "prettier": "2.8.2",
     "sass": "1.54.4",
     "tailwindcss": "3.1.8",
-    "vite": "4.0.4",
+    "vite": "4.3.9",
     "vite-imagetools": "4.0.13",
     "vitest": "0.26.3",
     "web-vitals": "3.1.0"
