--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-react": "3.0.1",
     "autoprefixer": "10.4.8",
     "cross-env": "7.0.3",
+    "dotenv": "^16.3.1",
     "esbuild": "0.16.15",
     "eslint": "8.22.0",
     "eslint-config-react-app": "7.0.1",
@@ -55,6 +56,7 @@
     "tailwindcss": "3.1.8",
     "vite": "4.3.9",
     "vite-imagetools": "4.0.13",
+    "vite-plugin-environment": "^1.1.3",
     "vitest": "0.26.3",
     "web-vitals": "3.1.0"
   },
