--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@vitejs/plugin-react": "3.0.1",
     "autoprefixer": "10.4.8",
     "cross-env": "7.0.3",
-    "dotenv": "^16.3.1",
+    "dotenv": "16.3.1",
     "esbuild": "0.16.15",
     "eslint": "8.22.0",
     "eslint-config-react-app": "7.0.1",
@@ -48,7 +48,7 @@
     "ic-mops": "0.14.1",
     "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
-    "mo-dev": "^0.10.1",
+    "mo-dev": "0.10.1",
     "netlify": "13.1.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.2",
@@ -56,7 +56,7 @@
     "tailwindcss": "3.1.8",
     "vite": "4.3.9",
     "vite-imagetools": "4.0.13",
-    "vite-plugin-environment": "^1.1.3",
+    "vite-plugin-environment": "1.1.3",
     "vitest": "0.26.3",
     "web-vitals": "3.1.0"
   },
