Remove server / certified cache logic

--- a/mops.toml
+++ b/mops.toml
@@ -1,4 +1,4 @@
 [dependencies]
 base = "0.9.1"
-server = "0.2.2"
+"http-parser.mo" = "https://github.com/NatLabs/http-parser.mo#v0.1.2"
 json = "https://github.com/aviate-labs/json.mo#v0.2.0"
