--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "frontend": "vite --port 3000",
     "backend": "mo-dev --generate --deploy -y",
     "build": "vite build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "run-s test:frontend test:backend",
+    "test:frontend": "vitest run",
+    "test:backend": "mo-test",
+    "test:watch": "run-p vitest mo-test",
     "sources": "mops sources",
     "prepare": "husky install",
     "precommit": "lint-staged"
