Motoko API canister (#105)
* Set up basic Motoko SSR API

* Progress

* Implement helper function to find query param values

* Progress

* Use 'Types.mo' file

* Fix URL query param key

* XML progress

* Validate URL

* Improve XML text literal nesting

* Set up JSON format

* Adjust whitespace

* Set up JSON

* Progress

* Remove extra parentheses

* Add XML header and refactor caching

* Remove debug logic

* Use flexible memory for serialization

* Add space before iframe close for consistency with Netlify implementation

* Refactor to distinguish between XML strings and attributes

* Swap max with min in height calculation

* Change provider URL to embed.motoko.org

* Fix height calculation logic

* Rearrange width/height calculation logic for clarity

* Use stable memory for server cache

* Use default cache strategy

* Use 'res.json()'

* Simplify

* Rearrange declarations

* Bump 'motoko' npm package

* Remove server / certified cache logic

* Set up canister unit testing

--- a/mops.toml
+++ b/mops.toml
@@ -1,5 +1,4 @@
-# Motoko dependencies (https://mops.one/)
-
 [dependencies]
 base = "0.9.1"
-# server = "0.2.2"
+"http-parser.mo" = "https://github.com/NatLabs/http-parser.mo#v0.1.2"
+json = "https://github.com/aviate-labs/json.mo#v0.2.0"
