--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "frontend": "vite --port 3000",
     "backend": "mo-dev --generate --deploy -y",
     "build": "vite build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "run-s test:frontend test:backend",
+    "test:frontend": "vitest run",
+    "test:backend": "mo-test",
+    "test:watch": "run-p vitest mo-test",
     "sources": "mops sources",
     "prepare": "husky install",
     "precommit": "lint-staged"
@@ -21,7 +23,7 @@
     "copy-to-clipboard": "3.3.1",
     "highlight.js": "11.6.0",
     "highlightjs-motoko": "1.0.0",
-    "motoko": "3.5.7",
+    "motoko": "3.6.2",
     "pako": "2.0.4",
     "react": "17.0.2",
     "react-device-detect": "2.2.2",
