--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "copy-to-clipboard": "3.3.1",
     "highlight.js": "11.6.0",
     "highlightjs-motoko": "1.0.0",
-    "motoko": "3.6.5",
     "pako": "2.0.4",
     "react": "17.0.2",
     "react-device-detect": "2.2.2",
@@ -51,6 +50,7 @@
     "jsdom": "20.0.0",
     "lint-staged": "13.0.3",
     "mo-dev": "0.10.1",
+    "motoko": "^3.6.13",
     "netlify": "13.1.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.2",
