Specify compiler version in mops.toml

--- a/mops.toml
+++ b/mops.toml
@@ -2,3 +2,6 @@
 base = "0.9.1"
 "http-parser.mo" = "https://github.com/NatLabs/http-parser.mo#v0.1.2"
 json = "https://github.com/aviate-labs/json.mo#v0.2.0"
+
+[toolchain]
+moc = "0.16.1"
